Added getWorkspaceUsers API
